--- a/css/styles.css
+++ b/css/styles.css
@@ -1,21 +1,87 @@
-/* element body start */
+/* tag body start */
 body {
   font-family: "Roboto", sans-serif;
   background-color: white;
   color: #434455;
 }
 
+.container {
+  max-width: 1158px;
+  margin: 0;
+  padding: 0 156px;
+}
+
+h1,
+h2,
+h3,
+p {
+  margin: 0;
+}
+
+img {
+  display: block;
+  max-width: 100%;
+}
+
 ul {
   list-style-type: none;
+  margin-top: 0;
+  margin-bottom: 0;
+  padding-left: 0;
 }
-/* element body finish */
 
-/* element header start */
-header a {
+section {
+  padding: 120px 0;
+}
+
+.header-second-level {
+  color: #2e2f42;
+  text-align: center;
+  font-size: 36px;
+  font-weight: 700;
+  line-height: 1.11;
+  letter-spacing: 0.72px;
+  text-transform: capitalize;
+  margin-top: 120px;
+  margin-bottom: 72px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.header-third-level {
+  color: #2e2f42;
+  font-size: 20px;
+  font-weight: 500;
+  line-height: 1.2;
+  letter-spacing: 0.4px;
+  margin-top: 32px;
+}
+
+.section-paragraph {
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.32px;
+}
+/* tag body finish */
+
+/* tag header start */
+.navigation .navigation-list.active {
+  border-bottom: 1px solid #404bbf;
+  border-width: 4px;
+  border-radius: 4px;
+}
+
+.navigation .navigation-list:hover {
+  border-bottom: 1px solid #404bbf;
+  border-width: 4px;
+  border-radius: 4px;
+}
+
+.page-header a {
   text-decoration: none;
 }
 
-nav .logo {
+.main-nav .logo {
   font-family: "Raleway", sans-serif;
   color: #4d5ae5;
   text-transform: uppercase;
@@ -23,50 +89,81 @@ nav .logo {
   font-size: 18px;
   line-height: 1.17;
   letter-spacing: 0.54px;
+  padding-right: 76px;
+  max-width: 115px;
 }
 
-nav .logo .text-web {
+.main-nav .logo .text-web-logo {
   color: #2e2f42;
 }
 
-nav .navigation a {
+.main-nav .navigation .navigation-link {
   color: #2e2f42;
   font-weight: 500;
   line-height: 1.5;
   letter-spacing: 0.32px;
 }
 
-nav .navigation a:hover {
+.main-nav .navigation .navigation-link:hover {
   color: #404bbf;
 }
 
-nav .navigation .navigation-link:focus {
+.main-nav .navigation .navigation-link:focus {
   color: #404bbf;
 }
 
-address {
+.address {
   font-style: normal;
 }
 
-.address ul .address-contact {
+.address .address-link {
   color: #434455;
   font-weight: 400;
   line-height: 1.5;
   letter-spacing: 0.32px;
+  padding-left: 40px;
 }
 
-.address ul .address-contact:hover {
+.address .address-link:hover {
   color: #404bbf;
 }
 
-.address ul .address-contact:focus {
+.address .address-link:focus {
   color: #404bbf;
 }
-/* element header finish */
 
-/* element main start */
+.container.container-nav {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 24px 0;
+  margin-left: 156px;
+  margin-right: 156px;
+}
+
+.container.container-nav .main-nav {
+  display: flex;
+}
+
+.container.container-nav .navigation {
+  display: flex;
+  align-items: flex-start;
+  gap: 40px;
+}
+
+.container.container-nav .address .card-address {
+  display: flex;
+}
+/* tag header finish */
+
+/* tag main start */
 /* first section start */
-main .first-section {
+.container-first-section {
+  margin-right: auto;
+  margin-left: auto;
+}
+
+.main-tag .first-section {
   background-color: #2e2f42;
   text-align: center;
 }
@@ -77,6 +174,11 @@ main .first-section {
   font-weight: 700;
   line-height: 1.07;
   letter-spacing: 1.12px;
+  max-width: 496px;
+  margin-top: 188px;
+  margin-bottom: 48px;
+  margin-right: auto;
+  margin-left: auto;
 }
 
 .button {
@@ -88,6 +190,12 @@ main .first-section {
   line-height: 1.5;
   letter-spacing: 0.64px;
   cursor: pointer;
+  display: flex;
+  padding: 16px 32px;
+  align-items: flex-start;
+  gap: 10;
+  margin: 0 auto;
+  margin-bottom: 188px;
 }
 
 .button:hover {
@@ -100,18 +208,36 @@ main .first-section {
 /* first section finish */
 
 /* second section start */
-.second-section ul .second-section-header-three {
-  color: #2e2f42;
-  font-size: 20px;
-  font-weight: 500;
-  line-height: 1.2;
-  letter-spacing: 0.4px;
+.container-second-section {
+  display: flex;
+  max-width: 100%;
 }
 
-.second-section ul .second-section-paragraph {
-  font-size: 16px;
-  line-height: 1.5;
-  letter-spacing: 0.32px;
+.hidden-header {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: 1px;
+  border: 0;
+  padding: 0;
+  white-space: nowrap;
+  clip-path: inset(100%);
+  clip: rect(0 0 0 0);
+  overflow: hidden;
+}
+
+.card-second-section {
+  display: flex;
+  gap: 24px;
+}
+
+.box-second-section {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: flex-start;
+  width: calc((100% - 3 * 24px) / 4);
+  gap: 8px;
 }
 /* second section finish */
 
@@ -120,68 +246,59 @@ main .first-section {
   background-color: #f4f4fd;
 }
 
-.third-section .third-section-header-two {
-  color: #2e2f42;
-  text-align: center;
-  font-size: 36px;
-  font-weight: 700;
-  line-height: 1.11;
-  letter-spacing: 0.72px;
-  text-transform: capitalize;
+.container-third-section {
+  display: flex;
+  flex-direction: column;
+  max-width: 100%;
 }
 
-.third-section ul .third-section-list {
+.card-team {
+  display: flex;
+}
+
+.third-section-list {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+  width: calc((100% - 3 * 24px) / 4);
+  margin-right: 24px;
+  padding-bottom: 32px;
   background-color: #ffffff;
-}
-
-.third-section ul .third-section-header-three {
-  color: #2e2f42;
-  font-size: 20px;
-  font-weight: 500;
-  line-height: 1.2;
-  letter-spacing: 0.4px;
-}
-
-.third-section ul .third-section-paragraph {
-  font-size: 16px;
-  line-height: 1.5;
-  letter-spacing: 0.32px;
+  flex-shrink: 0;
 }
 /* third section finish */
 
 /* fourth section start */
-.fourth-section .fourth-section-header-two {
-  color: #2e2f42;
-  text-align: center;
-  font-size: 36px;
-  font-weight: 700;
-  line-height: 1.11;
-  letter-spacing: 0.72px;
-  text-transform: capitalize;
+.container-fourth-section {
+  display: flex;
+  flex-direction: column;
+  max-width: 100%;
+  flex-shrink: 0;
 }
 
-.fourth-section ul .fourth-section-header-three {
-  color: #2e2f42;
-  font-size: 20px;
-  font-weight: 500;
-  line-height: 1.2;
-  letter-spacing: 0.4px;
+.card-portfolio {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 24px;
+  justify-content: center;
 }
 
-.fourth-section ul .fourth-section-paragraph {
-  font-size: 16px;
-  line-height: 1.5;
-  letter-spacing: 0.32px;
+.fourth-section-list {
+  width: calc((100% - 5 * 24px) / 3);
+  align-items: flex-start;
+  margin-bottom: 32px;
+  border-bottom: 1px solid #e7e9fc;
 }
 /* fourth section finish */
-/* element main finish */
+/* tag main finish */
 
-/* element footer start */
-footer {
+/* tag footer start */
+.footer {
   background-color: #2e2f42;
 }
 
-footer .footer-link {
+.footer-link {
   font-family: "Raleway", sans-serif;
   color: #4d5ae5;
   text-decoration: none;
@@ -190,15 +307,27 @@ footer .footer-link {
   line-height: 1.17;
   letter-spacing: 0.54px;
   text-transform: uppercase;
+  max-width: 115px;
+  margin-top: 101.5px;
+  margin-bottom: 17.5px;
 }
 
-footer .footer-link .text-web {
+.text-web-logo {
   color: #f4f4fd;
 }
 
-footer .footer-paragraph {
+.footer-paragraph {
   color: #f4f4fd;
   line-height: 1.5;
   letter-spacing: 0.32px;
+  max-width: 264px;
+  margin-bottom: 100px;
 }
-/* element footer finish */
+
+.container-footer {
+  display: flex;
+  flex-direction: column;
+  max-width: 100%;
+  flex-shrink: 0;
+}
+/* tag footer finish */
